# jx05presenter

./: .gitignore  LICENSE  Makefile  README.md  com.savikko.ringbridge.plist  ringbridge.swift
.github/workflows/: release.yml
windows/: Cargo.toml  PLAN.md
windows/src/: main.rs
