[package]
name = "ringbridge"
version = "1.5.1"
edition = "2021"
description = "JX-05 Bluetooth ring remote → presentation controller"
license = "MIT"

[dependencies]
hidapi = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "minwindef", "ntdef"] }

[profile.release]
strip = true
lto = true
